# stag_erasmus

./: .env_example  .gitignore  .safety-policy.yml  Dockerfile  README.md  df.csv  docker-compose.yml  generate_predmety.py  index.html  pyproject.toml  requirements.txt  search_predmety.csv  test.html  test.ipynb
.github/workflows/: ruff.yml
app/: main.py  redis_conn.py  settings.py  utils.py  validators.py
app/routers/: subjects.py  ws.py
app/static/: main.css  package.json
app/static/css/: main.css  mystyles.css  mystyles.css.map
app/static/sass/: mystyles.scss
app/templates/: index.html
app/templates/components/: cards.html  loading.html  modal.html  nav_form.html  table.html  table_header.html
app/templates/pages/: faculty.html  home.html
components/: cards.html  modal.html  table.html
scripts/: script.py
