[tool.poetry]
name = "stag-erasmus"
version = "0.1.0"
description = ""
authors = ["yoptohlejepeta <peta.kotlan@seznam.cz>"]
readme = "README.md"
packages = [{include = "stag_erasmus"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
requests = "^2.31.0"
pandas = "^2.1.4"
pydantic = "^2.5.3"
jinja2 = "^3.1.2"
unidecode = "^1.3.7"
uvicorn = "^0.25.0"
httpx = "^0.26.0"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
